--- a/voxel/.gitignore
+++ b/voxel/.gitignore
@@ -1,10 +1,10 @@
 # Byte-compiled / optimized / DLL files
-**/__pycache__/
+__pycache__/
 
-**/*.log
+*.log
 
 # Jupyter Notebook
-**/.ipynb_checkpoints
+.ipynb_checkpoints
 
 
 # Experiment
@@ -15,9 +15,4 @@
 *.json
 *.ipynb
 .vscode
-**/.DS_Store
 .DS_Store
-
-what3d_clusters/*.zip
-img/*.png
-**/*.zip
