--- a/environment.yaml
+++ b/environment.yaml
@@ -16,10 +16,14 @@ dependencies:
   - torchvision=0.2.1
   - tqdm=4.28.1
   - trimesh=2.37.7
-  - pip:
-    - logging
-    - argparse
-    - time
-    - yaml
-    - opencv-python
+  - pip=20.2.3
+  - logging
+  - argparse
+  - time
+  - yaml
+
+    
+    
+    
+    
 
