--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 opencv-python
 argparse
-yaml
 numpy
 pyyaml
 matplotlib
-matplotlib-base
 scikit-image
 scipy
 tensorboardx
 tqdm
 trimesh
+easydict
+tensorboard
+plyfile
