--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,5 @@ easydict
 tensorboard
 plyfile
 torchviz
+seaborn
 https://github.com/PyMesh/PyMesh/releases/download/v0.2.1/pymesh2-0.2.1-cp36-cp36m-linux_x86_64.whl
