--- a/requirements.txt
+++ b/requirements.txt
@@ -13,4 +13,5 @@ tensorboard
 plyfile
 torchviz
 seaborn
+graphviz
 https://github.com/PyMesh/PyMesh/releases/download/v0.2.1/pymesh2-0.2.1-cp36-cp36m-linux_x86_64.whl
