--- a/requirements.txt
+++ b/requirements.txt
@@ -14,4 +14,5 @@ plyfile
 torchviz
 seaborn
 graphviz
+scikit-learn
 https://github.com/PyMesh/PyMesh/releases/download/v0.2.1/pymesh2-0.2.1-cp36-cp36m-linux_x86_64.whl
