--- a/requirements.txt
+++ b/requirements.txt
@@ -15,4 +15,5 @@ torchviz
 seaborn
 graphviz
 scikit-learn
+ipython
 https://github.com/PyMesh/PyMesh/releases/download/v0.2.1/pymesh2-0.2.1-cp36-cp36m-linux_x86_64.whl
