--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,5 @@ seaborn
 graphviz
 scikit-learn
 ipython
+pyntcloud
 https://github.com/PyMesh/PyMesh/releases/download/v0.2.1/pymesh2-0.2.1-cp36-cp36m-linux_x86_64.whl
